# traderhelper

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
src/traderhelper/: __main__.py  config.py  main.py
src/traderhelper/indicators/: __init__.py  engine.py  needs.py
src/traderhelper/market/: __init__.py  candle_store.py
src/traderhelper/notify/: __init__.py  telegram.py
src/traderhelper/okx/: __init__.py  rest.py  ws.py
src/traderhelper/signals/: __init__.py  combo.py  conditions.py  crosses.py  dedup.py  divergence.py  ema_cross.py  macd_cross.py  price.py  rsi.py
tests/: conftest.py  helpers.py  test_candle_store.py  test_combo.py  test_config.py  test_dedup.py  test_divergence.py  test_ema_cross.py  test_macd_cross.py  test_parse_candle.py  test_price_alerts.py  test_rest_gap_fill.py  test_rest_retry.py  test_rsi.py  test_telegram_ping.py  test_ws_message.py
